test/Macros/rdar154771596.code
// REQUIRES: language_language_parser

// RUN: %empty-directory(%t)
// RUN: split-file %s %t

// RUN: %host-build-language -language-version 5 -emit-library -o %t/%target-library-name(MacroDefinition) -module-name=MacroDefinition %S/Inputs/syntax_macro_definitions.code -g -no-toolchain-stdlib-rpath

// RUN: %target-language-frontend -emit-module %t/Lib.code -module-name Lib -emit-module-path %t/Lib.codemodule

// RUN: %target-language-frontend -typecheck -verify -language-version 5 -load-plugin-library %t/%target-library-name(MacroDefinition) -I %t %t/a.code -primary-file %t/b.code

//--- Lib.code

@freestanding(expression)
public macro magicFile() -> String = #externalMacro(module: "MacroDefinition", type: "MagicFileMacro")

//--- a.code

import Lib

fn foo(x: String = #magicFile) {}

//--- b.code

// We're missing the necessary import in this file, make sure we diagnose.
fn bar() {
  foo() // expected-error {{no macro named 'magicFile'}}
}
